--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
-<title>Main</title>
+<title>Projects</title>
 </head>
+<footer>
+  <p>Created by Oliver Gerety.</p>
+</footer>
 </html>
