--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
+  
 <head>
-<title>Projects</title>
+  <link rel="stylesheet" href="mystyle.css">
+  <title>Projects</title>
 </head>
+  
 <footer>
   <p>Created by Oliver Gerety.</p>
 </footer>
+  
 </html>
