--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
 <head>
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="style.css">
   <title>Projects</title>
 </head>
   
