--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <title>Projects</title>
 </head>
   
+<body>
+  <ul>
+    <li>li 1</li>
+    <li>li 2</li>
+    <li>li 3</li>
+  </ul>
+</body>
+  
 <footer>
   <p>Created by Oliver Gerety.</p>
 </footer>
