--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
 <body>
   <ul>
-    <li>li 1</li>
-    <li>li 2</li>
-    <li>li 3</li>
+    <li onclick="location.href='https://google.com';">Google</li>
+    <li onclick="location.href='https://github.com/olivergerety';">Github Repo</li>
+    <li onclick="location.href='https://office.com';">Office</li>
   </ul>
 </body>
   
