--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <body>
   <ul>
-    <li onclick="location.href='https://google.com';">Google</li>
+    <li onclick="location.href='https://gdenes.com/g/img/live';">Colour Image</li>
     <li onclick="location.href='https://github.com/olivergerety';">Github Repo</li>
     <li onclick="location.href='https://office.com';">Office</li>
   </ul>
