--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li onclick="location.href='https://gdenes.com/g/img/live';">Colour Image</li>
     <li onclick="location.href='https://github.com/olivergerety';">Github Repo</li>
     <li onclick="location.href='https://office.com';">Office</li>
+    <li onclick="location.href='https://replit.com/@opdgerety';">Replit</li>
   </ul>
 </body>
   
