--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </head>
   
 <body>
-  <ul>
-    <li onclick="location.href='https://gdenes.com/g/img/live';">Colour Image</li>
-    <li onclick="location.href='https://github.com/olivergerety';">Github Repo</li>
-    <li onclick="location.href='https://office.com';">Office</li>
-    <li onclick="location.href='https://replit.com/@opdgerety';">Replit</li>
+  <ul class='mainList'>
+    <li class='mainLi' onclick="location.href='https://gdenes.com/g/img/live';">Colour Image</li>
+    <li class='mainLi' onclick="location.href='https://github.com/olivergerety';">Github Repo</li>
+    <li class='mainLi' onclick="location.href='https://office.com';">Office</li>
+    <li class='mainLi' onclick="location.href='https://replit.com/@opdgerety';">Replit</li>
   </ul>
 </body>
   
