--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact me</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="contact.css">
 </head>
 <body>
   <div class="container">
@@ -43,6 +43,6 @@
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-  <script src="main.js"></script>
+  <script src="contact.js"></script>
 </body>
 </html>
